# RobomasterServerTurbowarp

./: .gitignore  Connection.patch  Report.patch  pyproject.toml  requirements.txt
docs/: PYTHON_SETUP.md  RAPPORT LOUIS.md  RASPBERY.md  README.md  ROADMAP.md  docs.odt  style.css
src/app/: index.html  main.py  robomaster_extension.js  robomaster_server.py  server.py  test_connection_router.py  wgsi.py
src/app/assets/js/: index.js
src/app/config/: config.py
src/app/tabs/: Armor.py  LedEffects.py  RobomasterBasics.py  Sensor.py  SensorAdapter.py  __init__.py
src/client/: eslint.config.js  generateLanguages.ts  main.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.mts
src/client/config/: config.ts
src/client/environments/: .env.development  .env.production
src/client/src/: Block.ts
src/client/src/locales/: Language.ts  messages.fr.template.json  messages.template.json
src/client/src/tabs/: Armor.ts  Chassis.ts  ExtensionModule.ts  LedEffects.ts  Media.ts  RobomasterBasics.ts  Sensor.ts  SensorAdapter.ts  Smart.ts  Tab.ts  index.ts
src/lib/Connection/: ConnectionMode.py  StaMode.py  __init__.py
src/lib/Router/: Route.py  Router.py
src/lib/Tabs/: Tab.py  __init__.py
src/scratch_extension/: config.js  config.ts  eslint.config.js  index.html  jsdoc.json  language.js  main.js  main.ts  package-lock.json  package.json  robomaster_extension.js  robomaster_extension_back.js  tsconfig.json  vite.config.js  vite.config.mts
src/scratch_extension/config/: config.ts
src/scratch_extension/locales/: Language.ts  language.js
src/scratch_extension/locales/en/: messages.json
src/scratch_extension/locales/fr/: messages.json
src/scratch_extension/src/: Block.ts  Tab.ts
src/scratch_extension/src/locales/: Language.ts  messages.en.template.json  messages.fr.template.json  messages.template.json
src/scratch_extension/tabs/: Armor.js  Chassis.js  ExtensionModule.js  LedEffects.js  Media.js  RobomasterBasics.js  Sensor.js  SensorAdapter.js  Smart.js  Tab.js  Tab.ts
src/scratch_extension/types/locales/: Language.d.ts
src/scratch_extension/utils/: Block.js  Block.ts
src/server/app/: robomaster_server.py  test_connection_router.py
src/server/app/config/: config.py
src/server/app/tabs/: Armor.py  Chassis.py  ExtensionModule.py  Media.py  Smart.py  (+2 more)
tests/lib/Router/: test_Router.py
(+17 files in other folders)
